Adds more documentation to the swagger file for posts.
