# routes/posts/post.getAllByUsername.js
@@ -4,16 +4,8 @@ const newPostModel = require('../../models/postModel')
 
 router.get("/posts/getAllByUsername/:username", async (req, res) => {
     const { username } = req.params
-    newPostModel.exists({ username: username })
-        .then(e => {
-            if (!e) {
-                return res.status(404).json('this user doesnt exists')
-            } else {
-                newPostModel.find({ username: username })
-                    .then(userPosts => res.status(200).json(userPosts))
-                    .catch(err => res.status(404).json({ err }));
-            }
-        })
+    const allPosts = await newPostModel.find({ username: username })
+    return res.status(200).json(allPosts)
 })
 
 module.exports = router;
